assets/css/style.css
/* ... */
h1, h2, h3, h4, h6 {
  font-family: "Poppins", sans-serif;
}

h5 {
  font-family: 'Poppins', sans-serif;
  font-size: 12px;
}

@media (min-width:320px) {
  #main{
    margin-left: 3em;
  }
}

/*--------------------------------------------------------------
# Back to top button
--------------------------------------------------------------*/
.back-to-top {
  position: fixed;
  visibility: hidden;
  opacity: 0;
  right: 15px;
  bottom: 15px;
  z-index: 996;
  background: #ABC4FF;
  width: 40px;
  height: 40px;
  border-radius: 50px;
  transition: all 0.4s;
}
.back-to-top i {
  font-size: 28px;
  color: white;
  line-height: 0;
}
.back-to-top:hover {
  background: orange;
  color: white;
}
.back-to-top.active {
  visibility: visible;
  opacity: 1;
}

/*--------------------------------------------------------------
# Preloader
--------------------------------------------------------------*/
#preloader {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 9999;
  overflow: hidden;
  background: white;
}

#preloader:before {
  content: "";
  position: fixed;
  top: calc(50% - 30px);
  left: calc(50% - 30px);
  border: 6px solid #ABC4FF;
  border-top-color: white;
  border-bottom-color: white;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  -webkit-animation: animate-preloader 1s linear infinite;
  animation: animate-preloader 1s linear infinite;
}

@-webkit-keyframes animate-preloader {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes animate-preloader {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
/*--------------------------------------------------------------
# Disable aos animation delay on mobile devices
--------------------------------------------------------------*/
@media screen and (max-width: 768px) {
  [data-aos-delay] {
    transition-delay: 0 !important;
  }
}
/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
#header {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 9997;
  transition: all 0.5s;
  padding: 15px;
  overflow-y: auto;
}
@media (max-width: 992px) {
  #header {
    width: 300px;
    background: white;
    border-right: 1px solid #e6e9ec;
    left: -300px;
  }
}

@media (min-width: 992px) {
  #main {
    margin-left: 100px;
  }
}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/**
* Desktop Navigation 
*/
.nav-menu {
  padding: 0;
  display: block;
}
.nav-menu * {
  margin: 0;
  padding: 0;
  list-style: none;
}
.nav-menu > ul > li {
  position: relative;
  white-space: nowrap;
}
.nav-menu a, .nav-menu a:focus {
  display: flex;
  align-items: center;
  color: #45505b;
  padding: 10px 18px;
  margin-bottom: 8px;
  transition: 0.3s;
  font-size: 15px;
  border-radius: 50px;
  background: #f2f3f5;
  height: 56px;
  width: 100%;
  overflow: hidden;
  transition: 0.3s;
}
.nav-menu a i, .nav-menu a:focus i {
  font-size: 20px;
}
.nav-menu a span, .nav-menu a:focus span {
  padding: 0 5px 0 7px;
  color: #45505b;
}
@media (min-width: 992px) {
  .nav-menu a, .nav-menu a:focus {
    width: 56px;
  }
  .nav-menu a span, .nav-menu a:focus span {
    display: none;
    color: white;
  }
}
.nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
  color: white;
  background: #ABC4FF;
}
.nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
  color: white;
}
.nav-menu a:hover, .nav-menu li:hover > a {
  width: 100%;
  color: white;
}
.nav-menu a:hover span, .nav-menu li:hover > a span {
  display: block;
}

/**
* Mobile Navigation 
*/
.mobile-nav-toggle {
  position: fixed;
  right: 10px;
  top: 10px;
  z-index: 9998;
  border: 0;
  background: none;
  font-size: 28px;
  transition: all 0.4s;
  outline: none !important;
  line-height: 0;
  cursor: pointer;
  border-radius: 50px;
  padding: 5px;
}
.mobile-nav-toggle i {
  color: #45505b;
}

.mobile-nav-active {
  overflow: hidden;
}
.mobile-nav-active #header {
  left: 0;
}
.mobile-nav-active .mobile-nav-toggle {
  color: white;
  background-color: #ABC4FF;
}

/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/

#hero .social-links {
  margin-top: 30px;
  text-align: center;
}

#hero .social-links a {
  font-size: 24px;
  display: inline-block;
  color: #45505b;
  line-height: 1;
  margin-right: 17px;
  margin-left: 17px;
  transition: 0.3s;
}

#hero .social-links a:hover {
  color: #ABC4FF;
}

section.hero::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: #000;
  opacity: 0.4;
}

section.hero-home::before {
  content: '';
  display: block;
  background: #f5f6f8;
  width: 50%;
  height: calc(100% + 12rem);
  position: absolute;
  top: 0;
  right: 0;
}

section.hero-home::after {
  content: '';
  display: block;
  width: 160px;
  height: 160px;
  background: url(../img/pattern.svg);
  background-size: 10rem;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.5;
}

section.hero-home > .container {
  position: relative;
}

section.hero-home > .container::before {
  content: '';
  display: block;
  width: 120px;
  height: 120px;
  background: url(../img/triangle.svg) no-repeat;
  background-size: 100%;
  position: absolute;
  top: 6rem;
  right: 0;
  opacity: 0.03;
  z-index: 1;
}

section.hero-home > .container::after {
  content: '';
  display: block;
  width: 60px;
  height: 60px;
  background: url(../img/circle.svg) no-repeat;
  background-size: 100%;
  position: absolute;
  left: 0;
  bottom: 1rem;
  opacity: 0.03;
  z-index: -1;
}
/* ... */

